docker/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-auth
  labels:
    app: laravel-auth
